--- a/task_backend/requirements.txt
+++ b/task_backend/requirements.txt
@@ -24,8 +24,10 @@ django-redis==5.3.0
 django-timezone-field==5.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-extra-fields==3.7.0
 drf-yasg==1.21.7
 ecdsa==0.18.0
+filetype==1.2.0
 gunicorn==21.2.0
 idna==3.4
 inflection==0.5.1
